# context-compiler-directive-drafter

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: DrafterAcquisitionSpec.md  README.md  llm-preprocessor.md  preprocessor-package.md  releasing.md
examples/: basic_usage.py  prompt_rendering.py
examples/integrations/: README.md
examples/integrations/litellm/: with_preprocessor.py
examples/integrations/litellm_proxy/: README.md  context_compiler_precall_hook_with_preprocessor.py
examples/integrations/openwebui/: README.md  open_webui_pipe_with_preprocessor.py
host_support/: __init__.py  confirmation.py  provider_mode.py
scripts/: check_boundaries.py  validate_markdown.sh
src/context_compiler_directive_drafter/: __init__.py  cli.py  constants.py  drafter.py  heuristic_preprocessor.py  output_validation.py  prompt_utils.py
src/context_compiler_directive_drafter/prompts/: default.txt  llama.txt
tests/: conftest.py  test_cli.py  test_drafter.py  test_examples.py  test_host_support.py  test_litellm_integration_error_paths.py  test_litellm_preprocessor_model_config.py  test_litellm_proxy_hooks.py  test_openwebui_preprocessor_pipe.py  test_package_resources.py  test_precompiler_prompt_utils.py  test_preprocessor_api_contract_fixture.py  test_preprocessor_conformance.py  test_preprocessor_heuristic.py  test_preprocessor_heuristic_properties.py  test_preprocessor_output_validation.py  test_preprocessor_validator_properties.py
tests/fixtures/preprocessor/: compound-clear-premise-and-reset-policies-unknown.json  compound-prohibit-semicolon-use-unknown.json  compound-remove-policy-newline-use-unknown.json  compound-set-premise-then-use-unknown.json  compound-use-and-prohibit-unknown.json  parse-canonical-directive-quoted-payload-use-docker.json  parse-structured-json-directive.json  public-api-v1.json  singular-use-and-payload.json  validator-structured-extra-key-unknown.json
